--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
     </div>
 </div>
 <a href="https://github.com/lyonlai/bootstrap-paginator"><img style="position: absolute; top: 0; right: 0; border: 0;z-index: 99999;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
 <script src="lib/bootstrap.min.js" type="text/javascript"></script>
 <script src="src/bootstrap-paginator.js"></script>
 <script src="lib/highlight.pack.js" type="text/javascript"></script>
